# oh-my-grok-build

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/mobile/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/ios/App/: Podfile
apps/mobile/src/: App.css  App.tsx  index.css  notifications.ts  providers.ts  storage.ts
apps/mobile/src/acp/: client.ts
apps/mobile/src/components/: AskUserModal.tsx  ChatScreen.tsx  ConnectionScreen.tsx  EffortPicker.tsx  ModelPicker.tsx  PermissionCard.tsx  SessionList.tsx  Settings.tsx  ToolOutput.tsx  VoiceButton.tsx
archive/oh-my-grok-build-ts/: package.json  tsconfig.json
archive/oh-my-grok-build-ts/scripts/: build.js
archive/oh-my-grok-build-ts/src/: env.ts  git.ts  index.ts  lock.ts  net.test.ts  net.ts  permissions.test.ts  permissions.ts  spawner.ts  taste.test.ts  taste.ts  test-utils.ts  timeline.ts  types.ts
archive/oh-my-grok-build-ts/src/acp/: client.test.ts  client.ts  server.ts  transport.ts
archive/oh-my-grok-build-ts/src/background/: runner.ts
archive/oh-my-grok-build-ts/src/commands/: connect.test.ts  connect.ts  cron.test.ts  devin.ts  exec.test.ts  exec.ts  harness.test.ts  harness.ts  loop.test.ts  loop.ts  provider.ts  research.ts  schedule.test.ts  serve.test.ts  serve.ts  subagent.ts  swarm.test.ts  swarm.ts  taste.ts  team.ts  timeline.ts  tools.ts  use.ts
archive/oh-my-grok-build-ts/test-fixtures/: fake-grok.mjs  grok.cmd
crates/oh-my-grok-build/: Cargo.toml
crates/oh-my-grok-build/src/: approvals.rs  args.rs  doctor.rs  harness.rs  hashline.rs  lib.rs  lsp.rs  main.rs  marketplace.rs  memory.rs  moe.rs  net.rs  playbook.rs  pr.rs  prompt_guard.rs  providers.rs  research.rs  scheduler.rs  server.rs  session.rs  skill.rs  subagents.rs  swarm.rs  taste.rs  timeline.rs  tool_overrides.rs  workflow.rs
crates/oh-my-grok-build/src/providers/: catalog.rs
crates/oh-my-grok-build/src/tools/: mod.rs  web_search.rs
grok-build-app/: .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
grok-build-app/src/: App.css  App.test.tsx  App.tsx  QrScanner.tsx  acp.test.ts  acp.ts  types.ts  vite-env.d.ts
grok-build-app/src/test/: setup.ts
plugin/: plugin.json
plugin/agents/: reviewer.md
plugin/commands/: autonomous.md  browser.md  btw.md  byok.md  devin.md  live.md  loop.md  plan.md  research.md  schedule.md  taste.md  use.md  workflow.md  yolo.md
plugin/hooks/: hooks.json
plugin/skills/auto-commit/: SKILL.md
plugin/skills/clarify/: SKILL.md
plugin/skills/goal/: SKILL.md
plugin/skills/memory/: SKILL.md
plugin/skills/review/: SKILL.md
plugin/skills/todo/: SKILL.md
tools/oh-my-grok-build/: README.md  package-lock.json  package.json  tsconfig.json
tools/oh-my-grok-build/scripts/: build.js
tools/oh-my-grok-build/src/: config.ts  env.test.ts  grok.ts  index.ts  net.test.ts  net.ts  rate-limit.ts  server.ts  session.ts  spawner.ts  taste.ts  team.ts  timeline.ts  types.ts
tools/oh-my-grok-build/test-fixtures/: acp-client.js
(+90 files in other folders)
