[package]
name = "oh-my-grok-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Opinionated productivity, orchestration, and mobile-relay layer on top of Grok Build."
default-run = "oh-my-grok-build"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shlex = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
qrcode = { version = "0.14", default-features = false }
uuid = { workspace = true, features = ["v4"] }
xai-crash-handler = { path = "../codegen/xai-crash-handler" }
xai-grok-pager = { path = "../codegen/xai-grok-pager" }
xai-grok-pager-minimal = { path = "../codegen/xai-grok-pager-minimal" }
xai-grok-shell = { path = "../codegen/xai-grok-shell" }
xai-grok-telemetry = { path = "../codegen/xai-grok-telemetry" }
xai-grok-tools = { path = "../codegen/xai-grok-tools" }
xai-grok-update = { path = "../codegen/xai-grok-update" }
xai-grok-version = { path = "../codegen/xai-grok-version" }

[lints]
workspace = true
