[package]
name = "oh-my-grok-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Opinionated productivity, orchestration, and mobile-relay layer on top of Grok Build."
default-run = "omgb"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
blake3 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
constant_time_eq = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
gethostname = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shlex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
quick-xml = { workspace = true }
qrcode = { workspace = true }
scraper = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }
xai-crash-handler = { path = "../codegen/xai-crash-handler" }
xai-grok-config = { path = "../codegen/xai-grok-config" }
xai-grok-pager = { path = "../codegen/xai-grok-pager" }
xai-grok-pager-minimal = { path = "../codegen/xai-grok-pager-minimal" }
xai-grok-shell = { path = "../codegen/xai-grok-shell" }
xai-tty-utils = { path = "../codegen/xai-tty-utils" }
croner = { workspace = true }

[[bin]]
name = "safe-shell-guard"
path = "src/bin/safe_shell_guard.rs"

[lints]
workspace = true
